# dcpdoctor

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  gen_fixtures.py
.github/workflows/: ci.yml
bindings/python/: CMakeLists.txt  dcpdoctor.i
bindings/python/dcpdoctor/: __init__.py
docs/: index.html
gui/: index.html  package-lock.json  package.json
gui/src/: main.js  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs  main.rs
include/dcpdoctor/: advanced.h  assetmap.h  audio.h  auto_qc.h  av_sync.h  bitrate.h  cache.h  checksum_verify.h  compliance.h  cpl.h  dcpdoctor.h  diff.h  fixes.h  frame_compare.h  hash.h  hdr.h  hdr_validate.h  hfr_stereo.h  imf.h  imf_compliance.h  info.h  isdcf.h  j2k.h  kdm.h  kdm_advanced.h  loudness.h  mxf.h  mxf_advanced.h  mxf_extract.h  photon.h  pkl.h  platform.h  preferences.h  premium.h  qc.h  qc_report.h  quality.h  report.h  schema_validate.h  schema_validator.h  (+8 more)
rust/: Cargo.toml
rust/crates/dcpdoctor-cli/: Cargo.toml
rust/crates/dcpdoctor-cli/src/: main.rs
rust/crates/dcpdoctor-core/: Cargo.toml
rust/crates/dcpdoctor-core/src/: assetmap.rs  cpl.rs  dcp.rs  diff.rs  hash.rs  info.rs  lib.rs  mxf.rs  note.rs  pkl.rs  report.rs  schema.rs  server.rs  signature.rs  subtitle.rs  timeline.rs  validate.rs
src/: advanced.cpp  assetmap.cpp  audio.cpp  auto_qc.cpp  av_sync.cpp  bitrate.cpp  cache.cpp  checksum_verify.cpp  compliance.cpp  cpl.cpp  dcp.cpp  diff.cpp  fixes.cpp  frame_compare.cpp  hash.cpp  hdr_validate.cpp  hfr_stereo.cpp  imf.cpp  imf_compliance.cpp  info.cpp  isdcf.cpp  j2k.cpp  kdm.cpp  kdm_advanced.cpp  loudness.cpp  main.cpp  mxf.cpp  mxf_advanced.cpp  mxf_extract.cpp  note.cpp  photon.cpp  pkl.cpp  preferences.cpp  premium.cpp  qc.cpp  qc_report.cpp  quality.cpp  report.cpp  schema_validate.cpp  schema_validator.cpp  (+8 more)
tests/: create_fixtures.py  test_main.cpp
tests/dcps/: fetch_test_dcps.py
tests/fixtures/bad_hash/: ASSETMAP.xml  picture.mxf  pkl.xml  sound.mxf
tests/fixtures/valid_mxf/: ASSETMAP.xml  cpl.xml  picture.mxf  pkl.xml  sound.mxf
tests/fixtures/valid_smpte/: cpl.xml  picture.mxf
