[package]
name = "dcpdoctor-gui"
version = "1.0.0"
description = "DcpDoctor Desktop GUI"
authors = ["DcpDoctor"]
edition = "2021"

[lib]
name = "dcpdoctor_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
