[package]
name = "dcpdoctor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DCP/IMF validation and analysis library"

[dependencies]
base64 = "0.22"
postkit.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true
time = "0.3"
tracing.workspace = true
x509-parser = "0.16"

[dev-dependencies]
tempfile = "3"
